# progress-you

./: CLAUDE.md  README.md  RELEASE_NOTES.md  my-signing-key.key  my-signing-key.key.pub  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-tiptap.mjs  tiptap-entry.js
src/: index - Copy.html  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: 01-core.jsx  02-shared.jsx  03-modals.jsx  04-views.jsx  05-overlays.jsx  06-app.jsx
