[package]
name = "progress-you"
version = "2.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "progress_you_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
